# SS-FeatNet

./: 3dfeatnetkp.py  LICENSE  README.md  genCluster.py  inference.py  testDescriptorMatching.py  train.sh  train1jit.py
cpp/: CMakeLists.txt  fpfhdesc.cpp  kpdetect.cpp
data/: augment.py  augment1.py  datagenerator.py
data/3dmatch/: CMakeLists.txt  desc2txt.py  desc2txt.sh  ply2bin.cpp  ply2bin.sh
exp/: README.md  genCluster.sh  recall_fpfh.sh  test3dfeatnetkpfig4_1.sh  test3dfeatnetkpfig4_1_kitti.sh  test3dfeatnetkpfig4_2.sh  test3dfeatnetkpfig4_2_attFeat.sh  test3dfeatnetkpfig4_2_kitti.sh  test3dfeatnetkpfig4_2_res.sh  testDesMatch.sh  testDesMatch_fpfh.sh  testDesMatch_keypoint_1.sh  testDesMatch_keypoint_2.sh  testUnsupkpfig4_1.sh  testUnsupkpfig4_2.sh  testfig4.sh  testkpfig4_1.sh  testkpfig4_1_kitti.sh  testkpfig4_2.sh  testkpfig4_2_attFeat.sh  testkpfig4_2_fpfh.sh  testkpfig4_2_kitti.sh  testsmoothdata.sh  testsmoothdataETH.sh  tmp.sh
models/: feat3dnet.py  feat3dnet2.py  feat3dnet3.py  feat3dnet4.py  feat3dnet5.py  net_factory.py
scripts/: Utils.m  computeAndVisualizeMatches.m  fig4_step1.m  fig4_step2.m  registrate.m  registrate_kitti.m  registrate_kitti_func.m  view_kp.m  view_pc.m
scripts_data_processing/oxford/: oxford_build_pointclouds.m  oxford_generate_train_cases.m
tf_ops/grouping/: tf_grouping_compile.sh
tf_ops/sampling/: tf_sampling_compile.sh
