cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
find_package(PCL 1.7 REQUIRED)# COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(kpdetect kpdetect.cpp)
add_executable(fpfhdesc fpfhdesc.cpp)

target_link_libraries(kpdetect ${PCL_LIBRARIES})
target_link_libraries(fpfhdesc ${PCL_LIBRARIES})
